# AIMS.XAI.Course

./: README.md  pyproject.toml
CAV/: TCAV-resnet.ipynb  optinonal_CAV_DATASETS.md
LIME/: image_LIME.ipynb
LOFO_SAGE/: LOFO.ipynb  SAGE.ipynb
PDP_ALE/: accumulated_local_effects.ipynb  partial_dependence_plot.ipynb
Shapley_SHAP/: SHAP.ipynb  Shapley.ipynb  mnist_cnn.pt
Transformers/: XAI.Transformers.ipynb
counterfactuals/: XAI.Counterfactuals_multiobj.ipynb  XAI.Counterfactuals_titanic.ipynb  utils.py
interpretations/: homework1_xgboost_model.json  interpretations.ipynb
