[project]
name = "xai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dcor>=0.6",
    "gower>=0.1.2",
    "ipykernel>=7.1.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torchvision>=0.24.1",
    "xgboost>=3.1.3",
]
