[project]
name = "aims-xai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gower>=0.1.2",
    "ipykernel>=7.1.0",
    "lime>=0.2.0.1",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "ruff>=0.14.13",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.10.0",
    "xgboost",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
markupsafe = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
